2001-01-09  John Harper  <jsh@eazel.com>

	* images.c (Fcrop_image): fix typo when checking validity of
	HEIGHT parameter (patch from martin@whoever.com)

2001-01-05  John Harper  <jsh@eazel.com>

	* version 0.35

2001-01-04  John Harper  <jsh@eazel.com>

	* events.c (map_request): be sure to map the frame (if
	appropriate) _before_ calling the map-notify-hook. Otherwise X
	errors can result from code thinking the frame is visible when
	it isn't yet. Fixes bug 5243 (shaded windows die on restart)

2001-01-02  John Harper  <jsh@eazel.com>

	* images.c (Fcomposite_images): fixed bugs in both gdk-pixbuf
	and Imlib versions

2000-12-30  John Harper  <jsh@eazel.com>

	* gtk-style.c (states): reordered this array so that it matches
	the actual GtkStateType enum. Patch from <michaelj@maine.rr.com>

2000-12-22  John Harper  <jsh@eazel.com>

	* images.c (Fmake_image_from_x_drawable): special cased (=
	depth 1) case for gdk-pixbuf substrate

2000-12-18  John Harper  <jsh@eazel.com>

	* keys.c (direct_modifiers): only substitute physical for
	virtual modifiers if the physical modifiers actually exist.
	Otherwise just preserve the virtual bits

	(translate_event_to_x_button, translate_event_to_x_key): if
	after translating modifiers, any virtual modifiers still exist,
	don't accept the event

	* keys.h (EV_VIRT_MOD_MASK): new definition, the bits
	representing virtual (non X-native) modifiers

2000-12-05  John Harper  <jsh@eazel.com>

	* keys.c (lookup_event): reject events if they're button events
	but don't have at least one button modifier (or the `Any'
	modifier) set. Fixes #4983

2000-12-04  John Harper  <jsh@eazel.com>

	* keys.c: support Button6 and Button7
	* keys.h: define Button6 and Button7 values to their logical
	values (known to work on XFree86 version 4)

	[ adapted from a patch by Steve Haslam <araqnid@debian.org> ]

	* images.c (Fimage_modifier, Fset_image_modifier): fixed bug of
	not accepting () to stand for all three color components

	* version 0.34
